trasfer points from rect to 3d with fusion

--- a/Point_trasfer.ipynb
+++ b/Point_trasfer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f9a938cd",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6d9627cf",
    "metadata": {},
    "outputs": [
@@ -22,11 +22,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Click Fisheye Point = (1332.5,645.3)\n",
-      " Rect view 2: Rect Point = (411.0,699.0) \n",
-      " Rect view 3: Rect Point = (994.0,524.0) \n",
-      "Click Rect_point = (460.0,662.0) \n",
-      " Fisheye Point = (1378,645) | BEV Point = (1270,724)\n"
+      "Click Fisheye Point = (1425.6,1144.8)\n",
+      "Click Rect_point = (624.0,574.0) \n",
+      " Fisheye Point = (1698,1086) | BEV Point = (1292,665)\n",
+      "Click Rect_point = (692.0,490.0) \n",
+      " Fisheye Point = (1746,1175) | BEV Point = (1298,648)\n",
+      "Click Rect_point = (604.0,316.0) \n",
+      " Fisheye Point = (1931,1134) | BEV Point = (1279,594)\n",
+      "Click Rect_point = (732.0,224.0) \n",
+      " Fisheye Point = (1838,528) | BEV Point = (1186,658)\n",
+      "Click Rect_point = (676.0,406.0) \n",
+      " Fisheye Point = (1677,605) | BEV Point = (1242,693)\n",
+      "Click Rect_point = (732.0,526.0) \n",
+      " Fisheye Point = (1641,724) | BEV Point = (1262,692)\n",
+      "Click Rect_point = (456.0,452.0) \n",
+      " Fisheye Point = (1033,1018) | BEV Point = (1311,735)\n",
+      "Click Rect_point = (420.0,470.0) \n",
+      " Fisheye Point = (1034,1053) | BEV Point = (1314,733)\n",
+      "Click Rect_point = (988.0,350.0) \n",
+      " Fisheye Point = (1198,1631) | BEV Point = (1381,674)\n",
+      "Click Rect_point = (968.0,180.0) \n",
+      " Fisheye Point = (1251,1769) | BEV Point = (1451,621)\n",
+      "Click Rect_point = (692.0,286.0) \n",
+      " Fisheye Point = (1517,1619) | BEV Point = (1370,620)\n",
+      "Click Rect_point = (200.0,624.0) \n",
+      " Fisheye Point = (1078,1243) | BEV Point = (1327,720)\n"
      ]
     }
    ],
